--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
         <!-- JPA 하이버네이트 -->
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>6.2.7.Final</version>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.5.6.Final</version>
             <type>pom</type>
         </dependency>
         <!-- MySQL 데이터베이스 -->
@@ -27,6 +27,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.29</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
         </dependency>
     </dependencies>
 
